--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			"name": "BrandWield",
 			"legalName": "BrandWield Inc.",
 			"url": "https://app.brandwield.com",
-			"slogan": "Making content vision and content production, synonymous",
+			"slogan": "BrandWield, Making content vision and content production, synonymous",
 			"foundingDate": "2022",
 			"brand":  {
 				"@type": "Brand",
