--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
 <body>
 
 <header>
-
 	<!-- Nav Bar -->
 	<div id="navBar" style="height: 55px; display: flex; justify-content: space-around;">
 		<div class="navTab" onclick="selectContentType('brand'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b'; // Color change to purple not working for these tabs">Brand</div>
@@ -71,7 +70,6 @@
 		<div class="navTab" onclick="selectContentType('newContent'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b';">New Content</div>
 		<div class="navTab" onclick="selectContentType('settings'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b';">Settings</div>
 	</div>
-
 </header>
 
 <main>
@@ -1274,28 +1272,30 @@
 
 					<!-- Hook -->
 					<span style="display: flex; align-items: center;">
-							<label for="hookGlobal" style="width: 100px;">Hook</label>
-							<input id="hookGlobal" type="text" class="cleanCursorInput" placeholder="hook" size="40" onkeyup="hookGlobalUpdate();" />
-							<img id="hookGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="clearHookGlobal();"/>
-							<button onclick="hookGlobalFontPriority1();">L</button>
-							<button onclick="hookGlobalFontPriority2();">M</button>
-							<button onclick="hookGlobalFontPriority3();">S</button>
-						</span>
+						<label for="hookGlobal" style="width: 100px;">Hook</label>
+						<input id="hookGlobal" type="text" class="cleanCursorInput" placeholder="hook" size="40" onkeyup="hookGlobalUpdate();" />
+						<img id="hookGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="clearHookGlobal();"/>
+						<button onclick="hookGlobalFontPriority1();">L</button>
+						<button onclick="hookGlobalFontPriority2();">M</button>
+						<button onclick="hookGlobalFontPriority3();">S</button>
+						<input id="hookGlobalInImages" type="checkbox" height="50px" width="50px;" onchange="hookGlobalInImages();" checked>
+					</span>
 
 					<!-- Hook Resolution -->
 					<span style="display: flex; align-items: center;">
-							<label for="hookResolutionGlobal" style="width: 100px;">Hook Resolution</label>
-							<input id="hookResolutionGlobal" type="text" class="cleanCursorInput" placeholder="hook resolution" size="40" onkeyup="hookResolutionGlobalUpdate();" />
-							<img id="hookResolutionGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="clearHookResolutionGlobal();"/>
-							<button onclick="hookResolutionGlobalFontPriority1();">L</button>
-							<button onclick="hookResolutionGlobalFontPriority2();">M</button>
-							<button onclick="hookResolutionGlobalFontPriority3();">S</button>
-						</span>
+						<label for="hookResolutionGlobal" style="width: 100px;">Hook Resolution</label>
+						<input id="hookResolutionGlobal" type="text" class="cleanCursorInput" placeholder="hook resolution" size="40" onkeyup="hookResolutionGlobalUpdate();" />
+						<img id="hookResolutionGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="clearHookResolutionGlobal();"/>
+						<button onclick="hookResolutionGlobalFontPriority1();">L</button>
+						<button onclick="hookResolutionGlobalFontPriority2();">M</button>
+						<button onclick="hookResolutionGlobalFontPriority3();">S</button>
+						<input id="hookResolutionGlobalInImages" type="checkbox" height="50px" width="50px;" onchange="hookResolutionGlobalInImages();" checked>
+					</span>
 
 				</div>
 
 				<!-- Generic Post -->
-				<div id="genericPostFields" class="contentTypeFieldOption" style="display: block;">
+				<div id="genericPostFields" class="contentTypeFieldOption finalImage" style="display: block;">
 
 					<!-- Body -->
 					<span style="display: flex; align-items: center;">
@@ -1307,7 +1307,7 @@
 				</div>
 
 				<!-- Update -->
-				<div id="companyUpdateFields" class="contentTypeFieldOption" style="display: none;">
+				<div id="companyUpdateFields" class="contentTypeFieldOption finalImage" style="display: none;">
 
 					<!-- Headline -->
 					<span style="display: flex; align-items: center;">
@@ -1339,7 +1339,7 @@
 				</div>
 
 				<!-- Sale/Promotion -->
-				<div id="salePromotionFields" class="contentTypeFieldOption" style="display: none;">
+				<div id="salePromotionFields" class="contentTypeFieldOption finalImage" style="display: none;">
 
 					<!-- Title -->
 					<span style="display: flex; align-items: center;">
@@ -1379,7 +1379,7 @@
 				</div>
 
 				<!-- Event Promotion -->
-				<div id="eventPromotionFields" class="contentTypeFieldOption" style="display: none;">
+				<div id="eventPromotionFields" class="contentTypeFieldOption finalImage" style="display: none;">
 
 					<!-- Title -->
 					<span style="display: flex; align-items: center;">
@@ -1420,7 +1420,7 @@
 				</div>
 
 				<!-- Testimonial / Review -->
-				<div id="testimonialReviewFields" class="contentTypeFieldOption" style="display: none;">
+				<div id="testimonialReviewFields" class="contentTypeFieldOption finalImage" style="display: none;">
 
 					<!-- Author Name -->
 					<span style="display: flex; align-items: center;">
@@ -1480,6 +1480,8 @@
 							<span id="callToActionGlobalSpan" style="display: flex; align-items: center; border: 2px solid #26a926; border-radius: 50px; padding: 0 5px 0 5px; margin: 0 8px 0 8px;">
 								<img id="callToActionGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="showBrandPopup();"/>
 							</span>
+							<input id="callToActionGlobalInImages" type="checkbox" height="50px" width="50px;" onchange="callToActionGlobalInImages();" checked>
+
 						</span>
 
 					<!-- Link -->
@@ -1519,7 +1521,7 @@
 							</div>
 							<input type="range" id="squareLogoGlobalSize" class="cleanCursorInput" name="squareLogoGlobalSize" min="0" max="100" step=".1" style="width: 50px;" oninput="squareLogoGlobalSizeUpdate();">
 
-							<img id="squareLogoGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="document.getElementById('squareLogoGlobal').value = null;"/>
+							<img id="squareLogoGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="clearSquareLogoGlobal();"/>
 							<span id="squareLogoGlobalSpan" style="display: flex; align-items: center; border: 2px solid #26a926; border-radius: 50px; padding: 0 5px 0 5px; margin: 0 8px 0 8px;">
 								<img id="squareLogoGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 5px 0 5px;" onclick="showBrandPopup();"/>
 							</span>
@@ -2178,9 +2180,8 @@
 
 		fetch('https://api.rebrandly.com/v1/links/new?destination=' + url + '&domain[fullName]=' + domain, options)
 		.then(response => response.json())
-		.then(response =>
-			document.getElementById("linkGlobal").value = response.shortUrl
-		)
+		.then(response => document.getElementById("linkGlobal").value = response.shortUrl)
+		.then(response => document.getElementsByClassName("linkGlobalHere").innerHTML = response.shortUrl)
 		.catch(error => console.log(error));
 
 	}
@@ -3757,8 +3758,93 @@
 		let element = document.querySelectorAll('.squareLogoGlobalHere');
 		for(let i = 0; i < element.length; i ++) {
 			element[i].src = "";
+			element[i].style.display = "none";
 		}
 	}
+
+	// fields in images?
+	function hookGlobalInImages() {
+
+		// if the checkbox is checked
+		if (document.getElementById("hookGlobalInImages").checked) {
+
+			// list all elements with the class of hookGlobalHere
+			let element = document.querySelectorAll('.hookGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				element[i].style.display = 'inline';
+			}
+		}
+		else {
+
+			// list all elements with the class of hookGlobalHere
+			let element = document.querySelectorAll('.hookGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				if (
+					element[i].parentElement.id == 'finalImageHorizontal' ||
+					element[i].parentElement.id == 'finalImageVertical' ||
+					element[i].parentElement.id == 'finalImageSquare' ||
+					element[i].parentElement.id == 'finalImageStory'
+				) {
+					element[i].style.display = 'none';
+				}
+			}
+		}
+	}
+	function hookResolutionGlobalInImages() {
+
+		// if the checkbox is checked
+		if (document.getElementById("hookResolutionGlobalInImages").checked) {
+
+			// list all elements with the class of hookResolutionGlobalHere
+			let element = document.querySelectorAll('.hookResolutionGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				element[i].style.display = 'inline';
+			}
+		}
+		else {
+
+			// list all elements with the class of hookResolutionGlobalHere
+			let element = document.querySelectorAll('.hookResolutionGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				if (
+					element[i].parentElement.id == 'finalImageHorizontal' ||
+					element[i].parentElement.id == 'finalImageVertical' ||
+					element[i].parentElement.id == 'finalImageSquare' ||
+					element[i].parentElement.id == 'finalImageStory'
+				) {
+					element[i].style.display = 'none';
+				}
+			}
+		}
+	}
+	function callToActionGlobalInImages() {
+
+		// if the checkbox is checked
+		if (document.getElementById("callToActionGlobalInImages").checked) {
+
+			// list all elements with the class of callToActionGlobalHere
+			let element = document.querySelectorAll('.callToActionGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				element[i].style.display = 'inline';
+			}
+		}
+		else {
+
+			// list all elements with the class of callToActionGlobalHere
+			let element = document.querySelectorAll('.callToActionGlobalHere');
+			for(let i = 0; i < element.length; i ++) {
+				if (
+					element[i].parentElement.id == 'finalImageHorizontal' ||
+					element[i].parentElement.id == 'finalImageVertical' ||
+					element[i].parentElement.id == 'finalImageSquare' ||
+					element[i].parentElement.id == 'finalImageStory'
+				) {
+					element[i].style.display = 'none';
+				}
+			}
+		}
+	}
+
 
 	// Brand popup
 	function showBrandPopup() {
