--- a/index.html
+++ b/index.html
@@ -1591,6 +1591,7 @@
 					<span style="display: flex; align-items: center; justify-content: space-between;">
 						<span style="display: flex; align-items: center;">
 								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding: 10px;"><img src="media/otherIcons/fieldTypes/color.svg" height="20" width="20" /></span>
+								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding-top: 10px; padding-bottom: 10px;"><img src="media/otherIcons/rightArrow.svg" height="20" width="20" /></span>
 								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding: 10px;"><img src="media/otherIcons/fieldTypes/image.svg" height="20" width="20" /></span>
 								<input id="primaryColorGlobal" type="color" class="cleanCursorInput" value="#000000" size="80" style="height: 40px; padding: 0; margin-left: 0 !important; padding-left: 0 !important;" oninput="primaryColorGlobalUpdate();" />
 								<img id="primaryColorGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
@@ -1606,6 +1607,7 @@
 					<span style="display: flex; align-items: center; justify-content: space-between;">
 						<span style="display: flex; align-items: center;">
 								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding: 10px;"><img src="media/otherIcons/fieldTypes/color.svg" height="20" width="20" /></span>
+								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding-top: 10px; padding-bottom: 10px;"><img src="media/otherIcons/rightArrow.svg" height="20" width="20" /></span>
 								<span style="display: flex; justify-content: center; align-items: center; margin: 0; background-color: #f0f0f0; padding: 10px;"><img src="media/otherIcons/fieldTypes/text.svg" height="20" width="20" /></span>
 								<input id="fontColorGlobal" type="color" class="cleanCursorInput" value="#000000" size="80" style="height: 40px; padding: 0; margin-left: 0 !important; padding-left: 0 !important;" oninput="fontColorGlobalUpdate();" />
 								<img id="fontColorGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
@@ -2437,7 +2439,9 @@
 		getFromBrand[i].style.boxShadow = "0 0 3px 0 rgba(0,0,0,0.5)";
 		if (squareLogo == null || squareLogo == "") {
 			getFromBrand.src = 'media/otherIcons/link.svg';
+		} else {
 		}
+	}
 
 	// 'Cmd' + 'b' or 'Ctrl' + 'b' to open the brandPopup
 	document.addEventListener('keydown', function(event) {
