--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
 		<div id="outputs" class="column2" style="max-height: 100vh; overflow: scroll; user-select: none;">
 
 			<span style="display: flex; align-items: center;">
-				<select id="contentTypeSelect" class="cleanCursorInput" style="padding: 5px !important; margin-left: 0;" onchange="valueSelectorUpdate();">
+				<select id="contentTypeSelect" class="cleanCursorInput" style="font-size: 14px; padding: 5px !important; margin-left: 0;" onchange="valueSelectorUpdate();">
 							<option value="genericPostFields" selected>Generic Post</option>
 							<option value="companyUpdateFields">Company Update</option>
 							<option value="salePromotionFields">Sale/Promotion</option>
