--- a/index.html
+++ b/index.html
@@ -1684,7 +1684,7 @@
 						<text class="testimonialReviewAuthorDateHere"></text>
 						<!-- Global End -->
 						<text class="callToActionGlobalHere"></text>
-						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: absolute; bottom: 5px; right: 5px;" />
+						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: relative; bottom: 5px; right: 5px;" />
 
 					</div>
 					<div id="finalImageVertical" class="primaryColorGlobalHere">
@@ -1713,7 +1713,7 @@
 						<text class="testimonialReviewAuthorDateHere"></text>
 						<!-- Global End -->
 						<text class="callToActionGlobalHere"></text>
-						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;"  style="z-index: 999; display: none; position: absolute; bottom: 5px; right: 5px;" />
+						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;"  style="z-index: 999; display: none; position: relative; bottom: 5px; right: 5px;" />
 					</div>
 					<div id="finalImageSquare" class="primaryColorGlobalHere">
 						<!-- Global Start -->
@@ -1741,7 +1741,7 @@
 						<text class="testimonialReviewAuthorDateHere"></text>
 						<!-- Global End -->
 						<text class="callToActionGlobalHere"></text>
-						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: absolute; bottom: 5px; right: 5px;" />
+						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: relative; bottom: 5px; right: 5px;" />
 					</div>
 					<div id="finalImageStory" class="primaryColorGlobalHere">
 						<!-- Global Start -->
@@ -1769,7 +1769,7 @@
 						<text class="testimonialReviewAuthorDateHere"></text>
 						<!-- Global End -->
 						<text class="callToActionGlobalHere"></text>
-						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: absolute; bottom: 5px; right: 5px;" />
+						<img class="squareLogoGlobalHere" alt="" src="" height="50px;" width="50px;" style="z-index: 999; display: none; position: relative; bottom: 5px; right: 5px;" />
 					</div>
 				</div>
 				<aside style="display: flex; align-items: flex-end; justify-content: flex-end;">
